# kalman

./: .gitignore  DESIGN  FAQ  HOWTO  PLAN  README  RESOURCES  autotools.nix  builder.sh  default.nix  kalman.nix  mkderivation.nix  python.nix  setup.sh  shell.nix
cmd/: cmake-default.sh
src/: CMakeLists.txt  KalmanConfig.h.in  README  junk.cpp
src/callback/: CallbackSet.hpp
src/cmake/: README  symlink.cmake
src/distribution/: CMakeLists.txt  Distribution.hpp  Empirical.hpp  Exponential.hpp  KolmogorovSmirnov.hpp  Normal.cpp  Normal.hpp  Uniform.hpp
src/distribution_py/: CMakeLists.txt  DistributionPy.cpp
src/filter/: CMakeLists.txt  KalmanFilter.cpp  KalmanFilter.hpp  KalmanFilterInput.cpp  KalmanFilterInput.hpp  KalmanFilterInputCallback.hpp  KalmanFilterInputSource.hpp  KalmanFilterObservable.cpp  KalmanFilterObservable.hpp  KalmanFilterOutputCallback.hpp  KalmanFilterState.cpp  KalmanFilterState.hpp  KalmanFilterStep.cpp  KalmanFilterStep.hpp  KalmanFilterSvc.cpp  KalmanFilterSvc.hpp  KalmanFilterTransition.cpp  KalmanFilterTransition.hpp  README  print_eigen.hpp
src/filter/utest/: CMakeLists.txt  KalmanFilter.test.cpp
src/filter_py/: CMakeLists.txt  FilterPy.cpp  README
src/logutil/: CMakeLists.txt  README  array.hpp  fixed.hpp  pad.hpp  printer.hpp  scope.cpp  scope.hpp  tag.hpp
src/matrix/: junk.cpp
src/option/: *shel  BboTick.cpp  BboTick.hpp  BlackScholes.cpp  BlackScholes.hpp  CMakeLists.txt  Callput.hpp  Greeks.cpp  Greeks.hpp  GreeksCallback.cpp  GreeksCallback.hpp  NotifyStrikeSetOmd.hpp  OmdCallback.cpp  OmdCallback.hpp  OptionExpirySet.cpp  OptionExpirySet.hpp  OptionId.hpp  OptionStrikeSet.cpp  OptionStrikeSet.hpp  Price.hpp  PricingContext.cpp  PricingContext.hpp  PutCall.hpp  Px2.hpp  PxSize2.cpp  PxSize2.hpp  Size.hpp  StrikeSetGreeksSimSource.hpp  StrikeSetMarketModel.cpp  StrikeSetMarketModel.hpp  StrikeSetOmd.cpp  StrikeSetOmd.hpp  StrikeSetOmdSimSource.cpp  StrikeSetOmdSimSource.hpp  VanillaOption.cpp  VanillaOption.hpp
src/option/utest/: BlackScholes.test.cpp  CMakeLists.txt  StrikeSetMarketModel.test.cpp  StrikeSetOmd.test.cpp  option_utest_main.cpp
src/option_py/: CMakeLists.txt  OptionPy.cpp  README
src/option_util/: CMakeLists.txt  Callput.hpp  Px2.hpp  PxSize2.cpp  PxSize2.hpp  Pxtick.hpp  Side.hpp  Size.hpp
src/process/: BrownianMotion.cpp  BrownianMotion.hpp  CMakeLists.txt  ExpProcess.cpp  ExpProcess.hpp  LogNormalProcess.hpp  Realization.hpp  RealizationCallback.hpp  RealizationSimSource.hpp  RealizationSource.hpp  RealizationTracer.hpp  StochasticProcess.hpp
src/process/utest/: CMakeLists.txt  RealizationSimSource.test.cpp  RealizationSource.test.cpp
src/process_py/: CMakeLists.txt  ProcessPy.cpp  README
src/queue/: CMakeLists.txt  EventSource.hpp  PollingReactor.cpp  PollingReactor.hpp  Reactor.hpp  ReactorSource.cpp  ReactorSource.hpp  SecondarySource.hpp  Sink.hpp  Source.cpp  Source.hpp
src/random/: Bernoulli.hpp  CMakeLists.txt  Exponential.hpp  GaussianPair.hpp  Generator.cpp  Generator.hpp  Normal.hpp  TwoPoint.hpp  Uniform.hpp  random_seed.hpp  random_shuffle.hpp  xoshiro256.hpp
src/reactor/: CMakeLists.txt  EventSource.hpp  PollingReactor.cpp  PollingReactor.hpp  README  Reactor.hpp  ReactorSource.cpp  ReactorSource.hpp  SecondarySource.hpp  Sink.cpp  Sink.hpp  Source.cpp  Source.hpp
src/reactor/utest/: CMakeLists.txt  Sink.test.cpp
src/reactor_py/: CMakeLists.txt  ReactorPy.cpp
src/redblacktree/: RedBlackTree.hpp
src/redblacktree/utest/: CMakeLists.txt  redblacktree.cpp  redblacktree_utest_main.cpp
src/refcnt/: CMakeLists.txt  Refcounted.cpp  Refcounted.hpp
src/refcnt/utest/: CMakeLists.txt  intrusive_ptr.test.cpp
src/reflect/: CMakeLists.txt  TypeDescr.cpp  TypeDescr.hpp  demangle.hpp
src/simulator/: CMakeLists.txt  SecondarySimSource.hpp  SimulationSource.hpp  Simulator.cpp  Simulator.hpp  SourceTimestamp.hpp
src/simulator_py/: CMakeLists.txt  README  SimulatorPy.cpp
src/statistics/: Histogram.hpp  SampleStatistics.hpp
src/time/: CMakeLists.txt  Time.hpp
src/tree/: RedBlackTree.cpp  RedBlackTree.hpp
src/tree/utest/: CMakeLists.txt  README  redblacktree.cpp
src/utestdata/filter/: kalman-revert1
